--- a/src/main/resources/templates/Feature2-SearchCourse/course-result.html
+++ b/src/main/resources/templates/Feature2-SearchCourse/course-result.html
@@ -42,6 +42,11 @@
                         <li id="most_recent"><a class="dropdown-item" th:href="@{'/search/courses/result?skill='+${entered}+'&sort=date'}" >Most Recent</a></li>
                         <li id="most_recent"><a class="dropdown-item" th:href="@{'/search/courses/result?skill='+${entered}+'&sort=view'}" >Most View</a></li>
                         <li id="most_recent"><a class="dropdown-item" th:href="@{'/search/courses/result?skill='+${entered}+'&sort=subscribe'}" >Most Subscribe</a></li>
+
+                        <!-- <li id="most_popular"><a class="dropdown-item" th:href="@{'/search/courses/result?skill='+${entered}+'&sort=like'}">Most Popular</a></li>
+                        <li id="most_recent"><a class="dropdown-item" th:href="@{'/search/courses/result?skill='+${entered}+'&sort=date'}" >Most Recent</a></li>
+                        <li id="most_recent"><a class="dropdown-item" th:href="@{'/search/courses/result?skill='+${entered}+'&sort=view'}" >Most View</a></li>
+                        <li id="most_recent"><a class="dropdown-item" th:href="@{'/search/courses/result?skill='+${entered}+'&sort=subscribe'}" >Most Subscribe</a></li> -->
                     </ul>
                 </div>
             </td>
