--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/course.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/course.html
@@ -109,10 +109,11 @@
                                     </div>
                                 </td>
                             </tr>
-
-
                         </table>
-                    </div>    
+                    </div>
+                    <br>
+                    <br>
+                    <a th:href="@{/dashboard/}" class="button-reset">Back to Dashboard</a>    
   
                 </td>
                 
