--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Others/sign-up.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Others/sign-up.html
@@ -27,7 +27,7 @@
                             <p><input name="password" type="password" th:field="*{password}" class="signup-input" required></p>
                             <b>Username</b>
                             <p><input name="username" type="text" th:placeholder="${currentUsername}" th:field="*{username}" class="signup-input"></p>
-                            <b>Year of Birth</b>
+                            <b>Date of Birth</b>
                             <p><input name="birthday" type="date" th:field="*{birthday}" class="signup-input" required></p>
                             <p><b>Current Role</b></p>
                             <p><input name="currentJobTitle" input type="text" th:field="*{currentJobTitle}" class="signup-input" required></p>
