--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/fragments/layout.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/fragments/layout.html
@@ -265,7 +265,7 @@
 
     <footer>
         <div id="footer"
-        <div class="footer-copyright text-center py-3"><span style="color:#fff; font-size:12px"> GDSA-55 Team-2 2023 All rights reserved©</span></div>
+        <div class="footer-copyright text-center py-3"><span style="color:#fff; font-size:12px"> Copyright© 2023 GDSA-55 Team-2 All Rights Reserved©</span></div>
         </section>
     </footer>
 </html>
