--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/calendar.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/calendar.html
@@ -34,7 +34,7 @@
                     </td>
                 </table>
                 <div id="Scheduled" class="course">
-                    <div id="content-wrapper">
+                    <div id="wrapforcalendar">
                         <table class="table table-striped" >
                             <tr th:if="${scheduledCourseList.empty}">
                                 <td colspan="2"> No Scheduled Course Available </td>
